--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,7 +10,9 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ "main" ]
+    branches: 
+       - main
+       - jenk
   pull_request:
     branches: [ "main" ]
   
@@ -22,7 +24,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Get code
+      uses: actions/checkout@v4
+      with:
+        ref: jenk
+        
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
